--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -23,6 +23,7 @@ spec = Gem::Specification.new do |s|
 
   # Files, Libraries, and Extensions
   s.files = %w[
+    bin/paper_config_chain.rb
     bin/paper_config_validate.rb
     lib/papercfg.rb
     lib/papercfg/version.rb
@@ -31,6 +32,7 @@ spec = Gem::Specification.new do |s|
   #s.autorequire = nil
   #s.bindir = 'bin'
   s.executables = %w[
+    paper_config_chain.rb
     paper_config_validate.rb
   ]
   #s.default_executable = nil
