--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -24,6 +24,7 @@ spec = Gem::Specification.new do |s|
   # Files, Libraries, and Extensions
   s.files = %w[
     bin/paper_config_chain.rb
+    bin/paper_config_invert.rb
     bin/paper_config_validate.rb
     lib/papercfg.rb
     lib/papercfg/version.rb
@@ -33,6 +34,7 @@ spec = Gem::Specification.new do |s|
   #s.bindir = 'bin'
   s.executables = %w[
     paper_config_chain.rb
+    paper_config_invert.rb
     paper_config_validate.rb
   ]
   #s.default_executable = nil
