Add comments to reference PAPER config files
Reference config files are not derived from any other config file.  All
other config files are derived from them (usually via "make", see
Makefile for more details).

--- a/psa256/sta_to_ant.yml
+++ b/psa256/sta_to_ant.yml
@@ -1,8 +1,11 @@
+# Reference PAPER config file.
+# This file is *NOT* derived from any other file.
+#
 # Map station to antenna
 # sA0-sG15 is main grid
 # sX0-sX15 is outlier positions
 # sZ0 is reference "station" (SE corner of hut)
-#
+---
 sA0  : # TBD
 sA1  : a10
 sA2  : a49
