--- a/psa256/rxpol_to_plate.yml
+++ b/psa256/rxpol_to_plate.yml
@@ -1,3 +1,6 @@
+# Reference PAPER config file.
+# This file is *NOT* derived from any other file.
+---
 r3A8X : p2r3c8
 r3A8Y : p2r4c8
 r3B8X : p2r5c8
