--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -27,6 +27,7 @@ spec = Gem::Specification.new do |s|
     bin/paper_config_invert.rb
     bin/paper_config_polarize.rb
     bin/paper_config_validate.rb
+    bin/paper_config_view_plate.rb
     lib/papercfg.rb
     lib/papercfg/version.rb
   ]
@@ -38,6 +39,7 @@ spec = Gem::Specification.new do |s|
     paper_config_invert.rb
     paper_config_polarize.rb
     paper_config_validate.rb
+    paper_config_view_plate.rb
   ]
   #s.default_executable = nil
 
