--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -27,6 +27,7 @@ spec = Gem::Specification.new do |s|
     bin/paper_config_invert.rb
     bin/paper_config_polarize.rb
     bin/paper_config_validate.rb
+    bin/paper_config_view_antgrid.rb
     bin/paper_config_view_fxgrid.rb
     bin/paper_config_view_fxin.rb
     bin/paper_config_view_plate.rb
@@ -41,6 +42,7 @@ spec = Gem::Specification.new do |s|
     paper_config_invert.rb
     paper_config_polarize.rb
     paper_config_validate.rb
+    paper_config_view_antgrid.rb
     paper_config_view_fxgrid.rb
     paper_config_view_fxin.rb
     paper_config_view_plate.rb
