Add (new) paper_config_view_fxin.rb
This shows all F engine input connection is gridded layout: 8 F engines
across and 32 inputs down.

--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -29,6 +29,7 @@ spec = Gem::Specification.new do |s|
     bin/paper_config_validate.rb
     bin/paper_config_view_antgrid.rb
     bin/paper_config_view_fxgrid.rb
+    bin/paper_config_view_fxin.rb
     bin/paper_config_view_fxpanel.rb
     bin/paper_config_view_plate.rb
     lib/papercfg.rb
@@ -45,6 +46,7 @@ spec = Gem::Specification.new do |s|
     paper_config_view_antgrid.rb
     paper_config_view_fxpanel.rb
     paper_config_view_fxin.rb
+    paper_config_view_fxpanel.rb
     paper_config_view_plate.rb
   ]
   #s.default_executable = nil
