Interpolate postitions for final 12 antennas
These are rough position values for use until these final 12 antennas
can be surveyed properly.

--- a/psa128/sta_to_pos.yml
+++ b/psa128/sta_to_pos.yml
@@ -5,14 +5,15 @@
 # sA0-sG15 are main grid
 # sX0-sX15 are outlier positions
 # sZ0      is reference position (SE corner of hut)
+#
+# Unless otherwise noted, all positions are from "paper_final_positions.CSV"
+# that Nima emailed to the PAPER group on 2013-11-06.
 ---
 metadata :
   units  : m
   origin : # TBD
   frame  : ENU
 
-# Unless otherwise noted, all positions are from "paper_final_positions.CSV"
-# that Nima emailed to the PAPER group on 2013-11-06.
 sA0  : [540846.114, 6600986.731, 1048.200]
 sA1  : [540861.107, 6600986.775, 1048.218]
 sA2  : [540876.059, 6600986.785, 1048.259]
@@ -41,9 +42,9 @@ sB8  : [540966.011, 6600982.763, 1048.249]
 sB9  : [540981.012, 6600982.794, 1048.275]
 sB10 : [540995.995, 6600982.779, 1048.263]
 sB11 : [541010.990, 6600982.762, 1048.330]
-sB12 : # TBD
+sB12 : [541025.964, 6600982.782, 1048.331] # interpolated from W,E neighbors
 sB13 : [541040.937, 6600982.802, 1048.331]
-sB14 : # TBD
+sB14 : [541055.946, 6600982.820, 1048.332] # interpolated from W,E neighbors
 sB15 : [541070.955, 6600982.839, 1048.333]
 sC0  : [540846.110, 6600978.796, 1048.290]
 sC1  : [540861.039, 6600978.790, 1048.330]
@@ -57,9 +58,9 @@ sC8  : [540966.004, 6600978.775, 1048.307]
 sC9  : [540981.026, 6600978.787, 1048.321]
 sC10 : [540995.992, 6600978.790, 1048.311]
 sC11 : [541010.998, 6600978.763, 1048.395]
-sC12 : # TBD
+sC12 : [541025.986, 6600978.799, 1048.389] # interpolated from W,E neighbors
 sC13 : [541040.975, 6600978.835, 1048.382]
-sC14 : # TBD
+sC14 : [541055.961, 6600978.833, 1048.378] # interpolated from W,E neighbors
 sC15 : [541070.947, 6600978.832, 1048.373]
 sD0  : [540846.113, 6600974.806, 1048.336]
 sD1  : [540861.082, 6600974.792, 1048.333]
@@ -73,9 +74,9 @@ sD8  : [540965.994, 6600974.778, 1048.349]
 sD9  : [540981.015, 6600974.812, 1048.361]
 sD10 : [540996.006, 6600974.808, 1048.352]
 sD11 : [541010.993, 6600974.795, 1048.403]
-sD12 : # TBD
+sD12 : [541025.978, 6600974.814, 1048.386] # interpolated from W,E neighbors
 sD13 : [541040.962, 6600974.833, 1048.369]
-sD14 : # TBD
+sD14 : [541055.976, 6600974.828, 1048.405] # interpolated from W,E neighbors
 sD15 : [541070.990, 6600974.824, 1048.441]
 sE0  : [540846.113, 6600970.792, 1048.375]
 sE1  : [540861.076, 6600970.762, 1048.383]
@@ -89,9 +90,9 @@ sE8  : [540966.005, 6600970.824, 1048.397]
 sE9  : [540981.006, 6600970.839, 1048.384]
 sE10 : [540996.019, 6600970.787, 1048.414]
 sE11 : [541010.965, 6600970.849, 1048.474]
-sE12 : # TBD
+sE12 : [541025.966, 6600970.836, 1048.450] # interpolated from W,E neighbors
 sE13 : [541040.967, 6600970.822, 1048.427]
-sE14 : # TBD
+sE14 : [541055.959, 6600970.837, 1048.425] # interpolated from W,E neighbors
 sE15 : [541070.951, 6600970.851, 1048.423]
 sF0  : [540846.115, 6600966.818, 1048.414]
 sF1  : [540861.072, 6600966.795, 1048.427]
@@ -105,9 +106,9 @@ sF8  : [540966.026, 6600966.822, 1048.411]
 sF9  : [540981.009, 6600966.860, 1048.427]
 sF10 : [540996.000, 6600966.804, 1048.425]
 sF11 : [541010.970, 6600966.837, 1048.491]
-sF12 : # TBD
+sF12 : [541025.962, 6600966.840, 1048.480] # interpolated from W,E neighbors
 sF13 : [541040.954, 6600966.844, 1048.469]
-sF14 : # TBD
+sF14 : [541055.961, 6600966.849, 1048.489] # interpolated from W,E neighbors
 sF15 : [541070.969, 6600966.853, 1048.509]
 sG0  : [540846.126, 6600962.838, 1048.466]
 sG1  : [540861.077, 6600962.770, 1048.477]
@@ -121,9 +122,9 @@ sG8  : [540966.022, 6600962.811, 1048.450]
 sG9  : [540981.060, 6600962.871, 1048.503]
 sG10 : [540996.021, 6600962.843, 1048.486]
 sG11 : [541010.981, 6600962.852, 1048.512]
-sG12 : # TBD
+sG12 : [541025.988, 6600962.848, 1048.490] # interpolated from W,E neighbors
 sG13 : [541040.995, 6600962.843, 1048.469]
-sG14 : # TBD
+sG14 : [541055.975, 6600962.843, 1048.490] # interpolated from W,E neighbors
 sG15 : [541070.955, 6600962.844, 1048.512]
 # paper_final_positions.CSV did not have any outlier positions.  The outlier
 # positions for stations sX0 to sX10 are taken from psa128_07aug2013_utm.CSV
