--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -27,6 +27,7 @@ spec = Gem::Specification.new do |s|
     bin/paper_config_invert.rb
     bin/paper_config_polarize.rb
     bin/paper_config_validate.rb
+    bin/paper_config_plot_array.rb
     bin/paper_config_view_antgrid.rb
     bin/paper_config_view_fxgrid.rb
     bin/paper_config_view_fxin.rb
@@ -44,6 +45,7 @@ spec = Gem::Specification.new do |s|
     paper_config_invert.rb
     paper_config_polarize.rb
     paper_config_validate.rb
+    paper_config_plot_array.rb
     paper_config_view_antgrid.rb
     paper_config_view_fxpanel.rb
     paper_config_view_fxin.rb
